@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-10T08:09:28Z",
+  "timestamp" : "2023-08-11T16:08:01Z",
   "count_outdated" : 1379,
   "uniques_outdated" : 333,
-  "count" : 1461,
-  "uniques" : 343,
+  "count" : 1470,
+  "uniques" : 346,
   "views" : [
     {
       "timestamp": "2023-07-29T00:00:00Z",
@@ -76,6 +76,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-11T00:00:00Z",
+      "count": 9,
+      "count_minmax": [ 9, 9 ],
+      "count_decinc": [ 0, 9 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
