@@ -1,6 +1,6 @@
 {
-  "count": 82,
-  "uniques": 10,
+  "count": 91,
+  "uniques": 13,
   "views": [
     {
       "timestamp": "2023-07-29T00:00:00Z",
@@ -41,6 +41,11 @@
       "timestamp": "2023-08-09T00:00:00Z",
       "count": 18,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-11T00:00:00Z",
+      "count": 9,
+      "uniques": 3
     }
   ]
 }
